vulpix/index.css
*{
	box-sizing: border-box;
	padding: 0px;
	margin: 0px;
}

.rootContainer{
	background-color: grey;
}

.addReservationButton{
	width:250px;
	height:60px;
	background-color:green;
	border-radius: 15px;
	font-size: 20px;
}

.cancelReservationButton{
	border-radius: 25px;
    border: 2px solid #73AD21;
	width:200px;
	height:30px;
	background-color:#222222;
}

.extendReservationButton{
	width:200px;
	height:30px;
	background-color:red;
	display:none;
	margin-top: 100px;
}

#reservationList{
	width: 100%;
	text-align: center;
	perspective: 500px;
	white-space: nowrap;
	overflow-x: auto;
}

.reservationItem{
	vertical-align: top;
	border-radius: 25px;
    border: 2px solid #73AD21;
	color: #ffffff;
	padding:10px;
	display:inline-block;
	transition: 1s linear all;
}


.reservationRunning{
	padding:5px;
}

.reservationImpending{
	padding:5px;
}

#addReservationWindow fieldset{
	padding:12px;
	border-style:none;
	outline:none;

}

@-webkit-keyframes rainbow {
	0% {border-color: hsl(0, 100%, 50%);}
	10% {border-color: hsl(36, 100%, 50%);}
	20% {border-color: hsl(72, 100%, 50%);}
	30% {border-color: hsl(108, 100%, 50%);}
	40% {border-color: hsl(144, 100%, 50%);}
	50% {border-color: hsl(180, 100%, 50%);}
	60% {border-color: hsl(216, 100%, 50%);}
	70% {border-color: hsl(252, 100%, 50%);}
	80% {border-color: hsl(288, 100%, 50%);}
	90% {border-color: hsl(324, 100%, 50%);}
	100% {border-color: hsl(360, 100%, 50%);}
}

@-webkit-keyframes rainbow2 {
	0% {filter: hue-rotate(0deg);}
	10% {filter: hue-rotate(36deg);}
	20% {filter: hue-rotate(72deg);}
	30% {filter: hue-rotate(108deg);}
	40% {filter: hue-rotate(144deg);}
	50% {filter: hue-rotate(180deg);}
	60% {filter: hue-rotate(216deg);}
	70% {filter: hue-rotate(252deg);}
	80% {filter: hue-rotate(288deg);}
	90% {filter: hue-rotate(324deg);}
	100% {filter: hue-rotate(360deg);}
}

.rainbowBorder{
	border: 2px solid hsl(0, 100%, 50%);
	animation: rainbow 5s infinite;
}

.pikachuDancing{
	filter: hue-rotate(0deg);
	animation: rainbow2 1s infinite;
}

#addReservationWindow input[type=text]{
	border: 1px solid black;
	margin:10px;
	padding:5px;
}
input.bookingTitle{ width: 460px; }
input.bookingStartDate{ width: 200px; }
input.bookingStartTime { width: 235px; }
input.bookingEndDate{ width: 200px; }
input.bookingEndTime { width: 235px; }

#currentTime{
	font-size:100px;
	font-weight: bold;
	display:block;
	color:white;
}

#currentDate{
	font-size:25px;
	display:block;
	color:white;
}

#roomName{
	font-size:50px;
	font-weight: bold;
	display:block;
	color:white;
}

#imageLogo{
	width: 20%;
}

.modalContainer{
	width: 100vw;
	height: 100vh;
	background-color: rgba(0, 0, 0, 0.5);
	position: absolute;
	top:0px;
	left:0px;
	text-align:center;
	display: none;
}

.modalContainer .innerContainer{
	background-color:#efefef;
	display: inline-block;
	padding: 20px;
	height: 350px;
	width: 700px;
	border-radius: 12px;
}

.textInput{
	width:350px;
	height:25px;
	padding:30px;
	border-style:none;
	outline:none;
}

.textInput:focus{
	border-style:none;
	outline:1px solid blue;
}

.cancelButton{
	background-color:red;
	color:white;
	margin:10px;
	width:150px;
	height:45px;
	border-radius: 10px
}

.okButton{
	background-color:green;
	color:white;
	margin:10px;
	width:150px;
	height:45px;
	border-radius: 10px;
}

.button{
	color:white;
	opacity:1;
	border-style: none;
}

.button:active{
	opacity:0.5;
}

.container1{
	text-align:center;
	padding:10px;
}

.container2{
	text-align:center;
	padding:10px;
}

.container3{
	text-align:center;
	padding:10px;
	width:100vw;
	background-color:black;
}

.innerContainer{
	position: relative;
	top: 30%;
}

#videoBackground{
	position:absolute;
	width:100vw;
	z-index:-1;
}

.picker__list{
	padding:0;
}

@media screen and (orientation:portrait) {
.container1{
	width:100vw;
	height:30vh;
}
	
.container2{
	width:100vw;
	height:30vh;
}
	
.container3{
	height:40vh;
}
}
 
@media screen and (orientation:landscape) {
.container1{
	width:50vw;
	height:50vh;
	float:left;
}
	
.container2{
	width:50vw;
	height:50vh;
	float:left;
}

.container3{
	height:50vh;
}
}

